@@ -1,13 +1,11 @@
 package com.netflix.astyanax.contrib.valve;
 
-import java.util.concurrent.Callable;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicLong;
 import java.util.concurrent.atomic.AtomicReference;
 
 import org.junit.Assert;
-import org.junit.Test;
 
 public class RollingTimeWindowValveTest {
 
@@ -16,7 +14,7 @@ public class RollingTimeWindowValveTest {
      
         final RollingTimeWindowValve valve = new RollingTimeWindowValve(10000, 1);
         
-        Long counter = new Long(0L);
+        Long counter = Long.valueOf(0L);
         
         for (int i=0; i<100000; i++) {
             boolean success = valve.decrementAndCheckQuota();
@@ -68,16 +66,12 @@ public class RollingTimeWindowValveTest {
         final AtomicLong successCount = new AtomicLong(0L);
         final MultiThreadTestControl testControl = new MultiThreadTestControl(numThreads);
         
-        testControl.runTest(new Callable<Void>() {
-
-            @Override
-            public Void call() throws Exception {
-                boolean success = valve.decrementAndCheckQuota();
-                if (success) {
-                    successCount.incrementAndGet();
-                }
-                return null;
+        testControl.runTest(() -> {
+            boolean success = valve.decrementAndCheckQuota();
+            if (success) {
+                successCount.incrementAndGet();
             }
+            return null;
         });
 
         Thread.sleep(sleepMillis);
@@ -96,26 +90,22 @@ public class RollingTimeWindowValveTest {
         
         final RollingTimeWindowValve valve = new RollingTimeWindowValve(10000, 10);
         
-        final AtomicReference<PauseTest> pause = new AtomicReference<PauseTest>(new PauseTest(8)); 
+        final AtomicReference<PauseTest> pause = new AtomicReference<>(new PauseTest(8)); 
         
         final AtomicLong successCount = new AtomicLong(0L);
         final MultiThreadTestControl testControl = new MultiThreadTestControl(8);
         
-        testControl.runTest(new Callable<Void>() {
+        testControl.runTest(() -> {
 
-            @Override
-            public Void call() throws Exception {
-                
-                if (pause.get().shouldPause()) {
-                    pause.get().waitOnResume();
-                }
-                
-                boolean success = valve.decrementAndCheckQuota();
-                if (success) {
-                    successCount.incrementAndGet();
-                }
-                return null;
+            if (pause.get().shouldPause()) {
+                pause.get().waitOnResume();
             }
+
+            boolean success = valve.decrementAndCheckQuota();
+            if (success) {
+                successCount.incrementAndGet();
+            }
+            return null;
         });
 
         Thread.sleep(1450);
@@ -142,8 +132,8 @@ public class RollingTimeWindowValveTest {
         //Assert.assertTrue("Success: " + successCount.get() + ", expected: " + expectedSuccesses + ", percentageDiff: " + percentageDiff, percentageDiff < 10);
         //System.out.println("Success: " + successCount.get() + ", expected: " + expectedSuccesses + ", percentageDiff: " + percentageDiff);
     }
-    
-    private class PauseTest {
+
+    private final class PauseTest {
         
         private final CountDownLatch waitLatch = new CountDownLatch(1);
         
